--- a/src/assets/styles/component-variables/_icon_button.scss
+++ b/src/assets/styles/component-variables/_icon_button.scss
@@ -16,7 +16,7 @@ $iconButtonColorsDefault: (
   "icon-button-outlined-default-icon-color": $base-400,
   "icon-button-outlined-hover-icon-color": $accent-2,
   "icon-button-outlined-active-icon-color": $accent,
-  "icon-button-outlined-focus-icon-color": $light,
+  "icon-button-outlined-focus-icon-color": $light-100,
   "icon-button-outlined-disabled-icon-color": $base-400,
   ////filled
   //background
