--- a/src/assets/styles/component-variables/_input.scss
+++ b/src/assets/styles/component-variables/_input.scss
@@ -1,58 +1,101 @@
+@import 'src/styles/variables';
+
 $inputColorsDefault: (
-  "input-default-background":#1E2023,
-  "input-default-label": #C4C4C4,
-  "input-default-border": 2px solid #25272E,
-  "input-default-icon": #8F9BB3,
+  'input-default-background': $light-8,
+  'input-default-label': $light-3,
+  'input-default-color': $light-3,
+  'input-default-caret': currentColor,
+  'input-default-border': $light-5,
+  'input-default-width': 1px,
+  'input-default-icon': currentColor,
 
-  "input-hover-background":#1E2023,
-  "input-hover-label": #C4C4C4,
-  "input-hover-border": 2px solid #64656A,
-  "input-hover-icon": #8F9BB3,
+  'input-hover-background': $light-8,
+  'input-hover-label': $light-2,
+  'input-hover-color': $light-2,
+  'input-hover-caret': currentColor,
+  'input-hover-border': $light-3,
+  'input-hover-width': 1px,
+  'input-hover-icon': currentColor,
 
-  "input-active-background":#1E2023,
-  "input-active-label": #64656A,
-  "input-active-border": 2px solid #8A7FF6,
-  "input-active-caret": #8A7FF6,
-  "input-active-icon": #8A7FF6,
+  'input-focus-background': $light-8,
+  'input-focus-label': $light-2,
+  'input-focus-color': $light-2,
+  'input-focus-border': $accent,
+  'input-focus-caret': $accent,
+  'input-focus-width': 2px,
+  'input-focus-icon': currentColor,
 
-  "input-focus-background":#1E2023,
-  "input-focus-label": #64656A,
-  "input-focus-border": 2px solid #8A7FF6,
-  "input-focus-icon": #8A7FF6,
+  'input-disabled-background': $light-8,
+  'input-disabled-label': $light-3,
+  'input-disabled-color': $light-3,
+  'input-disabled-caret': currentColor,
+  'input-disabled-border': $light-5,
+  'input-disabled-width': 1px,
+  'input-disabled-icon': currentColor,
 
-  "input-disabled-background":#191A1D,
-  "input-disabled-label": #64656A,
-  "input-disabled-border": 2px solid #191A1D,
-  "input-disabled-icon": #8F9BB3,
+  'input-error-background': rgba($red, 0.2),
+  'input-error-label': $red,
+  'input-error-color': $red,
+  'input-error-caret': currentColor,
+  'input-error-border': $red,
+  'input-error-width': 2px,
+  'input-error-icon': currentColor,
 
-  "input-error-background":#1E2023,
-  "input-error-label": #FF4040,
-  "input-error-border": 2px solid #FF4040,
-  "input-error-icon": #FF4040,
+  'input-success-background': rgba($green, 0.2),
+  'input-success-label': $green,
+  'input-success-color': $green,
+  'input-success-caret': currentColor,
+  'input-success-border': $green,
+  'input-success-width': 2px,
+  'input-success-icon': currentColor,
 );
 
 $inputColorsLight: (
-  "input-default-background":#FFFFFF,
-  "input-default-label": #2E3A59,
-  "input-default-border": 2px solid #DFE3EC,
+  'input-default-background': $light-8,
+  'input-default-label': $light-3,
+  'input-default-color': $light-3,
+  'input-default-caret': currentColor,
+  'input-default-border': $light-5,
+  'input-default-width': 1px,
+  'input-default-icon': currentColor,
 
-  "input-hover-background":#FFFFFF,
-  "input-hover-label": #6C778F,
-  "input-hover-border": 2px solid #6C778F,
+  'input-hover-background': $light-8,
+  'input-hover-label': $light-2,
+  'input-hover-color': $light-2,
+  'input-hover-caret': currentColor,
+  'input-hover-border': $light-3,
+  'input-hover-width': 1px,
+  'input-hover-icon': currentColor,
 
-  "input-active-background":#FFFFFF,
-  "input-active-label": #6C778F,
-  "input-active-border": 2px solid #8A7FF6,
+  'input-focus-background': $light-8,
+  'input-focus-label': $light-2,
+  'input-focus-color': $light-2,
+  'input-focus-border': $accent,
+  'input-focus-caret': $accent,
+  'input-focus-width': 2px,
+  'input-focus-icon': currentColor,
 
-  "input-focus-background":#1E2023,
-  "input-focus-label": #8A7FF6,
-  "input-focus-border": 2px solid #8A7FF6,
+  'input-disabled-background': $light-8,
+  'input-disabled-label': $light-3,
+  'input-disabled-color': $light-3,
+  'input-disabled-caret': currentColor,
+  'input-disabled-border': $light-5,
+  'input-disabled-width': 1px,
+  'input-disabled-icon': currentColor,
 
-  "input-disabled-background":#FFFFFF,
-  "input-disabled-label": #DFE3EC,
-  "input-disabled-border": 2px solid #C5CEE0,
+  'input-error-background': rgba($red, 0.05),
+  'input-error-label': $red,
+  'input-error-color': $red,
+  'input-error-caret': currentColor,
+  'input-error-border': $red,
+  'input-error-width': 2px,
+  'input-error-icon': currentColor,
 
-  "input-error-background":#FFFFFF,
-  "input-error-label": #FF4040,
-  "input-error-border": 2px solid #FF4040,
+  'input-success-background': rgba($green, 0.05),
+  'input-success-label': $green,
+  'input-success-color': $green,
+  'input-success-caret': currentColor,
+  'input-success-border': $green,
+  'input-success-width': 2px,
+  'input-success-icon': currentColor,
 );
