--- a/src/components/Input/styles.scss
+++ b/src/components/Input/styles.scss
@@ -1,252 +1,240 @@
-@import '../../assets/styles/variables';
-@import '../../assets/styles/mixins';
+@import 'src/assets/styles/variables';
+@import 'src/assets/styles/mixins';
 @import 'src/styles/helpers';
 
-.labelTextCommon {
-  position: absolute;
-  transform: translateY(-50%);
-  z-index: 1;
-  transition: 200ms ease-out;
-}
-
-.labelTextFocusedCommon {
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 20px;
-}
-
-
-.label {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-
-  &:focus-within .input + .labelText {
-    @extend .labelTextFocusedCommon;
-    top: 14px;
-  }
-
-  &:focus-within .textarea + .labelText {
-    @extend .labelTextFocusedCommon;
-    top: 20px;
-  }
-}
-
-.input + .labelText {
-  @extend .labelTextCommon;
-  left: spacing(2.5);
-  top: 50%;
-}
-
-.textarea + .labelText {
-  @extend .labelTextCommon;
-  left: spacing(3);
-  top: 25%;
-  padding-right: 4px;
-}
-
-.inputWrap {
-  position: relative;
-  width: 100%;
-
-  &.required {
-
-    &::after {
-      position: absolute;
-      content: '*';
-      top: 5px;
-      left: 5px;
-
-      color: $red;
+.input-wrapper {
+  @include flex(column, flex-start, flex-start);
+  &:hover:not(.input-disabled):not(.input-error):not(.input-success) {
+    .input {
+      &-label {
+        color: var(--input-hover-label);
+      }
+      &-body {
+        background: var(--input-hover-background);
+        @include border-like-shadow(var(--input-hover-width), var(--input-hover-border));
+        .textarea,
+        .input {
+          caret-color: var(--input-hover-caret);
+          color: var(--input-hover-color);
+          .input-startAdornment,
+          .input-endAdornment {
+            svg {
+              path {
+                fill: var(--input-hover-icon);
+              }
+            }
+          }
+        }
+      }
+      &-caption {
+        color: var(--input-hover-label);
+      }
     }
   }
-}
-
-.input, .textarea {
-  position: relative;
-  width: 100%;
-  height: 56px;
-  padding: spacing(2, 2.5);
-  box-sizing: border-box;
-  border-radius: $border-radius;
-  transition: 200ms all;
-  font-size: 16px;
-  color: $base-700;
-
-  background: $metal-50;
-  border: 1px solid $metal-300;
-
-  &:hover {
-    @include border-like-shadow(2px, $metal-400, 0 1px 6px rgba(119, 126, 144, 0.48));
-    // & + .labelText {
-    //   color: var(--input-hover-label);
-    // }
-  }
-
-  // &:not(:placeholder-shown) {
-  //   & + .labelText {
-  //     top: 14px;
-  //     font-size: 12px;
-  //     font-weight: 400;
-  //     line-height: 20px;
-  //     color: var(--input-active-label);
-  //   }
-
-  //   & ~ .endAdornment > svg > path {
-  //     fill: var(--input-focus-icon);
-  //   }
-  //   padding-top: spacing(3);
-  // }
-
-  &:focus {
-    background: var(--input-active-background);
-    border: var(--input-active-border);
-    color: var(--typography-default-color);
-    outline: none;
-    box-shadow: none;
-    caret-color: var(--input-active-caret);
-    // padding-top: spacing(3);
-    transition: 0s;
-    & ~ .endAdornment > svg > path {
-      fill: var(--input-focus-icon);
+  &.input {
+    &-in-focus {
+      .input {
+        &-label {
+          color: var(--input-focus-label);
+        }
+        &-body {
+          background: var(--input-focus-background);
+          @include border-like-shadow(var(--input-focus-width), var(--input-focus-border));
+          .textarea,
+          .input {
+            caret-color: var(--input-focus-caret);
+            color: var(--input-focus-color);
+            .input-startAdornment,
+            .input-endAdornment {
+              svg {
+                path {
+                  fill: var(--input-focus-icon);
+                }
+              }
+            }
+          }
+        }
+        &-caption {
+          color: var(--input-focus-label);
+        }
+      }
+    }
+    &-disabled {
+      opacity: 0.5;
+      .input {
+        &-label {
+          color: var(--input-disabled-label);
+        }
+        &-body {
+          .textarea,
+          .input {
+            pointer-events: none;
+            caret-color: var(--input-disabled-caret);
+            color: var(--input-disabled-color);
+            .input-startAdornment,
+            .input-endAdornment {
+              svg {
+                path {
+                  fill: var(--input-disabled-icon);
+                }
+              }
+            }
+          }
+        }
+        &-caption {
+          color: var(--input-disabled-label);
+        }
+      }
+    }
+    &-success {
+      .input {
+        &-label {
+          color: var(--input-success-label);
+        }
+        &-body {
+          background: var(--input-success-background);
+          @include border-like-shadow(var(--input-success-width), var(--input-success-border));
+          .textarea,
+          .input {
+            caret-color: var(--input-success-caret);
+            color: var(--input-success-color);
+            .input-startAdornment,
+            .input-endAdornment {
+              svg {
+                path {
+                  fill: var(--input-success-icon);
+                }
+              }
+            }
+          }
+        }
+        &-caption {
+          color: var(--input-success-label);
+        }
+      }
+    }
+    &-error {
+      .input {
+        &-label {
+          color: var(--input-error-label);
+        }
+        &-body {
+          background: var(--input-error-background);
+          @include border-like-shadow(var(--input-error-width), var(--input-error-border));
+          .textarea,
+          .input {
+            caret-color: var(--input-error-caret);
+            color: var(--input-error-color);
+            .input-startAdornment,
+            .input-endAdornment {
+              svg {
+                path {
+                  fill: var(--input-error-icon);
+                }
+              }
+            }
+          }
+        }
+        &-caption {
+          color: var(--input-error-label);
+        }
+      }
+    }
+    &-sm {
+      .input {
+        &-body {
+          padding: space(10, 16);
+          .textarea,
+          .input {
+            font-size: 16px;
+            line-height: 24px;
+          }
+          &.textarea-body {
+            padding: space(10, 10, 10, 16);
+          }
+        }
+      }
+    }
+    &-md {
+      .input {
+        &-body {
+          padding: space(10, 16);
+          .textarea,
+          .input {
+            font-size: 16px;
+            line-height: 24px;
+          }
+          &.textarea-body {
+            padding: space(10, 10, 10, 16);
+          }
+        }
+      }
     }
   }
-
-  &:active {
-    background: var(--input-active-background);
-    border: var(--input-active-border);
-    color: var(--typography-default-color);
-  }
-
-  // &::placeholder {
-  //   color: white;
-  // }
-
-  &:disabled {
-    cursor: not-allowed;
-  }
-
-  &.error {
-    @include border-like-shadow(2px, $red, 0 1px 6px rgba(119, 126, 144, 0.48));
-    & ~ .endAdornment > svg > path {
-      fill: var(--input-error-icon);
+  .input {
+    &-label {
+      color: var(--input-default-label);
+      &-text {
+        color: inherit;
+        font-size: 16px;
+        line-height: 24px;
+        margin-bottom: space(8);
+      }
     }
-
-    & + .labelText {
-      color: var(--input-error-label);
+    &-body {
+      background: var(--input-default-background);
+      @include border-like-shadow(var(--input-default-width), var(--input-default-border));
+      @include border-radius('input');
+      @include transition;
+      @include flex(row, center, flex-start);
+      .textarea,
+      .input {
+        appearance: none;
+        border: 0px solid transparent;
+        background: transparent;
+        outline: none;
+        height: 100%;
+        color: var(--input-default-color);
+        @include transition;
+        &::placeholder{
+          color: inherit;
+        }
+      }
+      .input-startAdornment,
+      .input-endAdornment {
+        width: 1em;
+        height: 1em;
+        svg {
+          width: 100%;
+          height: 100%;
+          transform: scale(1.2);
+          path {
+            stroke: var(--input-default-icon);
+            @include transition;
+          }
+        }
+      }
+      .input-startAdornment {
+        margin-right: space(15);
+      }
+      .input-endAdornment {
+        margin-left: space(15);
+      }
+      .textarea {
+        max-width: 100%;
+        resize: vertical;
+        &::-webkit-resizer {
+          border: none;
+          content: '';
+          background: url('../../assets/resizer.svg') no-repeat top left;
+          width: 8px;
+          height: 8px;
+        }
+      }
     }
-
-    &:focus-within + .labelText {
-      color: var(--input-error-label);
+    &-caption {
+      display: inline-block;
+      margin-top: space(8);
     }
-
-    &:not(:placeholder-shown) + .labelText {
-      color: var(--input-error-label);
-    }
-  }
-
-  &.success {
-    @include border-like-shadow(2px, $green, 0 1px 6px rgba(119, 126, 144, 0.48));
-    & ~ .endAdornment > svg > path {
-      fill: var(--input-error-icon);
-    }
-
-    & + .labelText {
-      color: var(--input-error-label);
-    }
-
-    &:focus-within + .labelText {
-      color: var(--input-error-label);
-    }
-
-    &:not(:placeholder-shown) + .labelText {
-      color: var(--input-error-label);
-    }
-  }
-
-  &[type="number"] {
-    appearance: none;
-    -moz-appearance: textfield;
-
-    &:hover,
-    &:focus {
-      appearance: none;
-      -moz-appearance: textfield;
-    }
-
-    &::-webkit-outer-spin-button,
-    &::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
-  }
-}
-
-.textError, .textSuccess {
-  position: absolute;
-  width: 100%;
-  display: inline-block;
-
-  margin-top: 4px;
-
-  text-align: left;
-  font-size: 14px;
-}
-
-.textError{
-  color: $red;
-}
-
-.textSuccess{
-  color: $green;
-}
-
-.icon {
-  position: absolute;
-  font-size: 14px;
-  transform: translateY(-50%);
-  top: 50%;
-  right: 25px;
-}
-
-.textarea {
-  padding: spacing(8, 3, 3, 3);
-  min-height: 160px;
-  width: 200px;
-  resize: vertical;
-  position: relative;
-  transition: 200ms;
-
-  &:focus {
-    // padding-top: spacing(4);
-    transition: 200ms;
-  }
-
-  // &:not(:placeholder-shown) {
-  //   padding-top: spacing(4);
-  //   & + .labelText {
-  //     top: 20px;
-  //     color: var(--input-active-label)
-  //   }
-  // }
-}
-
-::-webkit-resizer {
-  border: none;
-  content: '';
-  background: url('../../assets/resizer.svg') no-repeat top left;
-  width: 8px;
-  height: 8px;
-}
-
-.endAdornment {
-  position: absolute;
-  z-index: 1;
-  top: 50%;
-  right: spacing(3);
-  transform: translateY(-50%);
-
-  & > svg > path {
-    fill: var(--input-default-icon);
   }
 }
