--- a/src/assets/styles/component-variables/_avatar.scss
+++ b/src/assets/styles/component-variables/_avatar.scss
@@ -1,9 +1,9 @@
 @import 'src/styles/variables';
 
-$avatar-border-width: 1px;
-$avatar-border-radius: 50%;
-$avatar-animation-transform: -4px;
-
 $avatarColorsDefault:(
-  'avatar-default-border-color': $light-8
+  'avatar-default-border-color': $light-8,
+  'avatar-border-width': 1px,
+  'avatar-border-radius': 50%,
+  'avatar-animation-transform': -4px
+
 )
