--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -32,6 +32,7 @@ $light-1: #28293D;
 $light-2: #555770;
 $light-3: #8F90A6;
 $light-4: #C7C9D9;
+$light-middle: #D9D9D9;
 $light-5: #E4E4EB;
 $light-6: #EBEBF0;
 $bg-light: #F2F2F5;
