--- a/src/assets/styles/component-variables/_button.scss
+++ b/src/assets/styles/component-variables/_button.scss
@@ -54,11 +54,11 @@ $buttonColorsDefault: (
   'button-outlined-primary-disabled-border': $metal-300,
   'button-outlined-primary-disabled-border-width': 1px,
   //color
-  'button-outlined-primary-color': $dark,
-  'button-outlined-primary-hover-color': $dark,
-  'button-outlined-primary-active-color': $dark,
-  'button-outlined-primary-focus-color': $dark,
-  'button-outlined-primary-disabled-color': $dark,
+  'button-outlined-primary-color': $dark-0,
+  'button-outlined-primary-hover-color': $dark-0,
+  'button-outlined-primary-active-color': $dark-0,
+  'button-outlined-primary-focus-color': $dark-0,
+  'button-outlined-primary-disabled-color': $dark-0,
   //icon
   'button-outlined-primary-icon-color': currentColor,
   'button-outlined-primary-hover-icon-color': currentColor,
