--- a/generators/templates/components/styles.hbs
+++ b/generators/templates/components/styles.hbs
@@ -1,5 +1,6 @@
 @import '../../assets/styles/variables';
 @import '../../assets/styles/mixins';
+@import 'src/styles/helpers';
 
 .{{camelCase name}} { 
 
