--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -4,18 +4,18 @@ $typographyColorsDefault: (
   "typography-default-color": $metal-500,
   "typography-secondary-color": $metal-500,
   "typography-error-color": $red,
-  "typography-gray-color": $gray-6,
+  "typography-gray-6-color": $gray-6,
   "typography-drak-color": $dark,
-  "typography-purple-color": $accent,
-  "typography-light-color": $light-3,
+  "typography-accent-color": $accent,
+  "typography-light-3-color": $light-3,
 );
 
 $typographyColorsLight: (
   "typography-default-color": $metal-500,
   "typography-secondary-color": $metal-500,
   "typography-error-color": $red,
-  "typography-gray-color": $gray-6,
+  "typography-gray-6-color": $gray-6,
   "typography-drak-color": $dark,
-  "typography-purple-color": $accent,
-  "typography-light-color": $light-3,
+  "typography-accent-color": $accent,
+  "typography-light-3-color": $light-3,
 );
