--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -63,19 +63,19 @@
 }
 
 .gray {
-  color: var(--typography-gray-color);
+  color: var(--typography-gray-6-color);
 }
 
 .dark {
   color: var(--typography-dark-color)
 }
 
-.purple {
-  color: var(--typography-purple-color)
+.accent {
+  color: var(--typography-accent-color)
 }
 
-.light{
-  color: var(--typography-light-color)
+.light3{
+  color: var(--typography-light-3-color)
 }
 
 .normalWeight {
