--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -14,6 +14,7 @@
 @import './component-variables/tab-bar';
 @import './component-variables/avatar';
 @import './component-variables/art-card';
+@import './component-variables/breadcrumbs';
 
 :root {
 	$colors:(
@@ -32,7 +33,8 @@
 		$loaderColorsDefault,
 		$tabBarColorsDefault,
 		$avatarColorsDefault,
-		$artcardColorsDefault
+		$artcardColorsDefault,
+		$breadcrumbsColorsDefault
 	);
 
 	@each $key_name in $colors {
