--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -419,13 +419,13 @@
         var(--button-filled-tertiary-border-width),
         var(--button-filled-tertiary-border)
       );
-    
+
       .startAdornment > svg > path,
       .endAdornment > svg > path {
         stroke: var(--button-filled-tertiary-icon-color);
         fill: transparent;
       }
-    
+
       &:focus {
         background: var(--button-filled-tertiary-focus-background);
         color: var(--button-filled-tertiary-focus-color);
@@ -433,14 +433,14 @@
           var(--button-filled-tertiary-focus-border-width),
           var(--button-filled-tertiary-focus-border)
         );
-    
+
         .startAdornment > svg > path,
         .endAdornment > svg > path {
           stroke: var(--button-filled-tertiary-icon-color);
           fill: transparent;
         }
       }
-    
+
       &:hover {
         background: var(--button-filled-tertiary-hover-background);
         color: var(--button-filled-tertiary-hover-color);
@@ -448,14 +448,14 @@
           var(--button-filled-tertiary-hover-border-width),
           var(--button-filled-tertiary-hover-border)
         );
-    
+
         .startAdornment > svg > path,
         .endAdornment > svg > path {
           stroke: transparent;
           fill: var(--button-filled-tertiary-hover-icon-color);
         }
       }
-    
+
       &.active,
       &:active {
         background: var(--button-filled-tertiary-active-background);
@@ -464,14 +464,14 @@
           var(--button-filled-tertiary-active-border-width),
           var(--button-filled-tertiary-active-border)
         );
-    
+
         .startAdornment > svg > path,
         .endAdornment > svg > path {
           stroke: var(--button-filled-tertiary-active-icon-color);
           fill: transparent;
         }
       }
-    
+
       &:disabled {
         background: var(--button-filled-tertiary-disabled-background);
         color: var(--button-filled-tertiary-disabled-color);
@@ -486,7 +486,6 @@
         }
       }
     }
-    
   }
 
   &.text {
@@ -600,12 +599,15 @@
   width: fit-content;
   cursor: pointer;
   border-radius: 50%;
-  width: 48px;
-  height: 48px;
+  padding: 1em;
   box-sizing: border-box;
-  display: flex !important;
+  display: flex;
   justify-content: center;
   align-items: center;
+  svg {
+    width: 1em;
+    height: 1em;
+  }
 
   &.outlined {
     &-common {
@@ -649,38 +651,38 @@
   }
 
   &.filled {
-    &-common{
+    &-common {
       background: var(--icon-button-filled-default-background);
       border: $button-border-width solid var(--icon-button-filled-default-border);
-  
+
       & > svg > path {
         fill: var(--icon-button-filled-default-icon-color);
         @include transition;
       }
-  
+
       &:hover {
         background: var(--icon-button-filled-hover-background);
         border: $button-border-width solid var(--icon-button-filled-hover-border);
-  
+
         & > svg > path {
           fill: var(--icon-button-filled-hover-icon-color);
         }
       }
-  
+
       &:active {
         background: var(--icon-button-filled-active-background);
         border: $button-border-width solid var(--icon-button-filled-active-border);
-  
+
         & > svg > path {
           fill: var(--icon-button-filled-active-icon-color);
         }
       }
-  
+
       &:disabled {
         background: var(--icon-button-filled-disabled-background);
         opacity: 0.45;
         pointer-events: none;
-  
+
         & > svg > path {
           fill: var(--icon-button-filled-disabled-icon-color);
         }
