change font styles

--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -5,7 +5,7 @@ $typographyColorsDefault: (
   "typography-secondary-color": $metal-500,
   "typography-error-color": $red,
   "typography-gray-6-color": $gray-6,
-  "typography-drak-color": $dark,
+  "typography-dark-color": $dark,
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
 );
@@ -15,7 +15,7 @@ $typographyColorsLight: (
   "typography-secondary-color": $metal-500,
   "typography-error-color": $red,
   "typography-gray-6-color": $gray-6,
-  "typography-drak-color": $dark,
+  "typography-dark-color": $dark,
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
 );
