--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -41,6 +41,7 @@ $light-white: #ffffff;
 
 //metal
 $metal-50: #F9FAFB;
+$metal-100: #F3F4F6;
 $metal-200: #E5E7EB;
 $metal-300: #D1D5DB;
 $metal-400: #9CA3B0;
