--- a/generators/templates/components/component.hbs
+++ b/generators/templates/components/component.hbs
@@ -1,8 +1,8 @@
-import { VFC } from 'react';
+import React, { VFC } from 'react';
 
 import cn from 'clsx';
 
-import './styles.scss';
+import styles from './styles.module.scss';
 
 export interface {{ properCase name }}Props {
   className?: string;
@@ -10,7 +10,7 @@ export interface {{ properCase name }}Props {
 
 export const {{ properCase name }}: VFC<{{ properCase name }}Props> = ({ className }) => {
   return (
-    <div className={cn('{{ camelCase name }}', className)}>
+    <div className={cn(styles.{{camelCase name}}, className)}>
       Hello World!
     </div>
   );
