--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -5,7 +5,7 @@
 body {
   margin: 0;
 
-  font-family: Inter, sans-serif;
+  @include inter;
   font-size: $font-size-default;
   font-weight: 400;
   line-height: $line-height-default;
